0024767: Crash on making edges in HLRBRep